# copiolt-kit-langgraph

./: .gitignore  README.md  docker-compose.langfuse.yml
backend/: .env.example  .gitignore  pyproject.toml  test_copilotkit.py
backend/src/: __init__.py  agent.py  logger.py  main.py  tools.py
frontend/: .gitignore  package-lock.json
frontend/src/: App.css  App.tsx
